--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <body>
         <h1>Zach Carothers's CSCE 190 Site</h1>
 
-        <p>I &hearts; coding!</p>
+        <section class = "assignment">
+            <a href= "files/problemstatement.pdf"><img src= "images/problemstatement.png"></a>
+            <section calss= "ass-details">
+                <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID </h2><a></a>
+                <p>
+                    "Our single parent has been hit hard by COVID-19 and is struggling to be able to proivde for her kid and does not know much about cooking and how do do it cheap. Our soloution aims to be able to allow them the abilityu to search meals based on what ingredients they already have and suggests cheap meals that can be made with minimal ingredients that will last a long time."
+                </p>
+
+
+        </section>
+    </section>
     </body>
 </html>
