--- a/index.html
+++ b/index.html
@@ -10,24 +10,39 @@
         <section class = "assignment">
             <a href= "files/problemstatement.pdf"><img src= "images/problemstatement.png"></a>
             <section class= "ass-details">
-                <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID </h2><a></a>
+                <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID </h2></a>
                 <p>
                     "Our single parent has been hit hard by COVID-19 and is struggling to be able to proivde for her kid and does not know much about cooking and how do do it cheap. Our soloution aims to be able to allow them the abilityu to search meals based on what ingredients they already have and suggests cheap meals that can be made with minimal ingredients that will last a long time."
                 </p>
 
 
+             </section>
         </section>
-    </section>
 
     <!--AFFINITITY DIAGRAM -->
     <section class = "assignment">
-        <a href = "files/affinitydiagram.pdf"><img src = "images/affinitydiagram.png"/a></a>
+        <a href = "files/affinitydiagram.pdf"><img src = "images/affinitydiagram.png"></a>
         <section class = "ass-details">
-           <h2><a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Trail Mix</h2><a></a>
+           <h2><a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Trail Mix</h2></a>
                 <p>
                     Our group worked on a affinity diagram where we thought of ideas for our project!
                 </p>
+        </section>
 
     </section>
+
+     <!--PERSONAS-->
+        <section class = "assignment">
+            <a href = "files/PersonasElderberry.pdf"><img src = "images/PersonasElderbery.png"></a>
+            <section class = "ass-details">
+                <a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Elderberry Trail Mix</h2></a>
+                <p>
+                Personans for Group Elderberry!
+                </p>
+            </section>
+
+        </section>        
+
+    
     </body>
 </html>
