--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class = "assignment">
             <a href = "files/PersonasElderberry.pdf"><img src = "images/PersonasElderbery.png"></a>
             <section class = "ass-details">
-                <a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Elderberry Trail Mix</h2></a>
+               <h2><a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Elderberry Trail Mix</h2></a>
                 <p>
                 Personans for Group Elderberry!
                 </p>
