--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <section class = "assignment">
             <a href= "files/problemstatement.pdf"><img src= "images/problemstatement.png"></a>
             <section class= "ass-details">
-                <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID </h2></a>
+                <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID Recipies </h2></a>
                 <p>
-                    "Our single parent has been hit hard by COVID-19 and is struggling to be able to proivde for her kid and does not know much about cooking and how do do it cheap. Our soloution aims to be able to allow them the abilityu to search meals based on what ingredients they already have and suggests cheap meals that can be made with minimal ingredients that will last a long time."
+                    "Our single parent has been hit hard by COVID-19 and is struggling to be able to proivde for her kid and does not know much about cooking and how do do it cheap. Our soloution aims to be able to allow them the ability to search meals based on what ingredients they already have and suggests cheap meals that can be made with minimal ingredients that will last a long time."
                 </p>
 
 
@@ -23,7 +23,7 @@
     <section class = "assignment">
         <a href = "files/affinitydiagram.pdf"><img src = "images/affinitydiagram.png"></a>
         <section class = "ass-details">
-           <h2><a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Trail Mix</h2></a>
+           <h2><a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Cooking App</h2></a>
                 <p>
                     Our group worked on a affinity diagram where we thought of ideas for our project!
                 </p>
@@ -35,7 +35,7 @@
         <section class = "assignment">
             <a href = "files/PersonasElderberry.pdf"><img src = "images/PersonasElderbery.png"></a>
             <section class = "ass-details">
-               <h2><a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Elderberry Trail Mix</h2></a>
+               <h2><a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Cooking App</h2></a>
                 <p>
                 Personans for Group Elderberry!
                 </p>
@@ -43,6 +43,16 @@
 
         </section>        
 
-    
+    <!--Storyboard Assignment-->
+    <section class = "assignment">
+        <a href = "files/storyboard.pdf"><img src = "images/storyboard.png"></a>
+        <section class = "ass-details">
+           <h2><a href = "files/storyboard.pdf"><h2> Story Board: Miranda</h2></a>
+            <p>
+            A comic strip illustrating the need for a affordable meals for single parents hit by COVID-19.
+            </p>
+        </section>
+
+    </section>  
     </body>
 </html>
