--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <!--Storyboard Assignment-->
     <section class = "assignment">
-        <a href = "files/storyboard.pdf"><img src = "images/storyboard.png"></a>
+        <a href = "files/Storyboard-190.pdf"><img src = "images/storyboard.png"></a>
         <section class = "ass-details">
-           <h2><a href = "files/storyboard.pdf"><h2> Story Board: Miranda</h2></a>
+           <h2><a href = "files/Storyboard-190.pdf"><h2> Story Board: Miranda</h2></a>
             <p>
             A comic strip illustrating the need for a affordable meals for single parents hit by COVID-19.
             </p>
