--- a/index.html
+++ b/index.html
@@ -54,5 +54,16 @@
         </section>
 
     </section>  
+    <!--Sketching Assignment-->
+    <section class = "assignment">
+        <a href = "files/sketch190.pdf"><img src = "images/sketch190.png"></a>
+        <section class = "ass-details">
+           <h2><a href = "files/sketch190.pdf"><h2> Sketch: </h2></a>
+            <p>
+            Sketch of how our app will operate.
+            </p>
+        </section>
+
+    </section>  
     </body>
 </html>
