--- a/index.html
+++ b/index.html
@@ -8,71 +8,64 @@
         <h1>Zach Carothers's CSCE 190 Site</h1>
         <div class="assignments"> 
             <section class = "assignment">
+                <a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID Recipies </h2></a>
                 <a href= "files/problemstatement.pdf"><img src= "images/problemstatement.png"></a>
-                <section class= "ass-details">
-                    <h2><a href= "files/problemstatement.pdf"><h2> Problem Statement: COVID Recipies </h2></a>
                     <p>
                         "Our single parent has been hit hard by COVID-19 and is struggling to be able to proivde for her kid and does not know much about cooking and how do do it cheap. Our soloution aims to be able to allow them the ability to search meals based on what ingredients they already have and suggests cheap meals that can be made with minimal ingredients that will last a long time."
                     </p>
-
-
-                </section>
-            </section>
+           </section>
 
         <!--AFFINITITY DIAGRAM -->
         <section class = "assignment">
+            <a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Cooking App</h2></a>
             <a href = "files/affinitydiagram.pdf"><img src = "images/affinitydiagram.png"></a>
-            <section class = "ass-details">
-            <h2><a href = "files/affinitydiagram.pdf"><h2> Affinity Diagram: Cooking App</h2></a>
                     <p>
                         Our group worked on a affinity diagram where we thought of ideas for our project!
                     </p>
-            </section>
-
         </section>
 
         <!--PERSONAS-->
             <section class = "assignment">
+                <a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Cooking App</h2></a>
                 <a href = "files/PersonasElderberry.pdf"><img src = "images/PersonasElderbery.png"></a>
-                <section class = "ass-details">
-                <h2><a href = "files/PersonasElderberry.pdf"><h2> Personas: Personas for Cooking App</h2></a>
                     <p>
                     Personans for Group Elderberry!
                     </p>
-                </section>
 
             </section>        
 
         <!--Storyboard Assignment-->
         <section class = "assignment">
+            <a href = "files/Storyboard-190.pdf"><h2> Story Board: Miranda</h2></a>
             <a href = "files/Storyboard-190.pdf"><img src = "images/storyboard.png"></a>
-            <section class = "ass-details">
-            <h2><a href = "files/Storyboard-190.pdf"><h2> Story Board: Miranda</h2></a>
                 <p>
                 A comic strip illustrating the need for a affordable meals for single parents hit by COVID-19.
                 </p>
-            </section>
 
         </section>  
         <!--Sketching Assignment-->
         <section class = "assignment">
+            <a href = "files/sketch190.pdf"><h2> Sketch: </h2></a>
             <a href = "files/sketch190.pdf"><img src = "images/sketch190.png"></a>
-            <section class = "ass-details">
-            <h2><a href = "files/sketch190.pdf"><h2> Sketch: </h2></a>
                 <p>
                 Sketch of how our app will operate.
                 </p>
-            </section>
         </section>    
         <!--Video Assignment-->
         <section class = "assignment">
+            <a href = "https://youtu.be/0cADSSZeUBs"><h2> Paper Prototype: Cooking App </h2></a>
             <a href = "https://youtu.be/0cADSSZeUBs"><img src = "images/CookAppPic.png"></a>
-            <section class = "ass-details">
-            <h2><a href = "https://youtu.be/0cADSSZeUBs"><h2> Paper Prototype: Cooking App </h2></a>
                 <p>
                 A prototype of how our cooking/recipe app will work.
                 </p>
-            </section>
+        </section> 
+         <!--Usability Testing Script Assignment-->
+         <section class = "assignment">
+            <a href = "/files/testingscript.pdf"><h2> Usability Testing Script: Cooking App </h2></a>
+            <a href = "/files/testingscript.pdf"><img src = "images/testingscript.png"></a>
+                <p>
+                A test that analyzes the functions of the app and gets user feedback.
+                </p>
         </section> 
         </div>  
     </body>
