--- a/index.html
+++ b/index.html
@@ -61,10 +61,18 @@
         </section> 
          <!--Usability Testing Script Assignment-->
          <section class = "assignment">
-            <a href = "/files/testingscript.pdf"><h2> Usability Testing Script: Cooking App </h2></a>
-            <a href = "/files/testingscript.pdf"><img src = "images/testingscript.png"></a>
+            <a href = "files/testingscript.pdf"><h2> Usability Testing Script: Cooking App </h2></a>
+            <a href = "files/testingscript.pdf"><img src = "images/testingscript.png"></a>
                 <p>
                 A test that analyzes the functions of the app and gets user feedback.
+                </p>
+        </section> 
+        <!--Lo-fi Prototype Assignment -->
+        <section class = "assignment">
+            <a href = "files/low-fi-prototype/index.html"><h2> Low-Fi Prototype: Cooking App </h2></a>
+            <a href = "files/low-fi-prototype/index.html"><img src = "images/low-fi-prototype.png"></a>
+                <p>
+                An improved version of our original prototype. 
                 </p>
         </section> 
         </div>  
