--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                 An improved version of our original prototype. 
                 </p>
         </section> 
+        <!--Hi-fi Prototype Assignment -->
+        <section class = "assignment">
+            <a href = "files/low-fi-prototype/index.html"><h2> Hi-Fi Prototype: Cooking App </h2></a>
+            <a href = "files/low-fi-prototype/index.html"><img src = "images/low-fi-prototype.png"></a>
+                <p>
+                An improved version of our Low-fi protype with better quality. 
+                </p>
+        </section> 
         </div>  
     </body>
 </html>
