--- a/index.html
+++ b/index.html
@@ -77,10 +77,18 @@
         </section> 
         <!--Hi-fi Prototype Assignment -->
         <section class = "assignment">
-            <a href = "files/low-fi-prototype/index.html"><h2> Hi-Fi Prototype: Cooking App </h2></a>
-            <a href = "files/low-fi-prototype/index.html"><img src = "images/low-fi-prototype.png"></a>
+            <a href = "files/hi-fi-prototype/index.html"><h2> Hi-Fi Prototype: Cooking App </h2></a>
+            <a href = "files/hi-fi-prototype/index.html"><img src = "images/hi-fi-prototype.png"></a>
                 <p>
                 An improved version of our Low-fi protype with better quality. 
+                </p>
+        </section> 
+          <!--Video Assignment-->
+          <section class = "assignment">
+            <a href = " https://youtu.be/3JS6njd0z20 "><h2> Final Presentation: Cooking App </h2></a>
+            <a href = "https://youtu.be/3JS6njd0z20"><img src = "images/hi-fi-prototype.png"></a>
+                <p>
+                A hi-fi protoype presentation for our groups cooking app.
                 </p>
         </section> 
         </div>  
